# ai-tools-website

./: .env.example  .gitignore  AGENTS.md  ASTRO_MIGRATION_PLAN.md  CLAUDE.md  COMPARISON_SYSTEM_IMPLEMENTATION.md  Dockerfile  Dockerfile.updater  README.md  SLIM_DIRECTORY_RESET.md  V2_SIMPLIFICATION_PLAN.md  docker-compose.yml  pyproject.toml  update_page.py
ai_tools/: agent.py  constants.py
ai_tools/tools/: save_tool.py  web_search.py
ai_tools_website/: __init__.py  config.py  logging_config.py  maintenance.py  search.py  storage.py  web.py
ai_tools_website/static/: styles.css
ai_tools_website/tools/: save_tool.py  web_search.py
ai_tools_website/utils/: dedupe.py
ai_tools_website/v1/: comparison_detector.py  comparison_generator.py  content_enhancer.py  content_enhancer_v2.py  cron_utils.py  data_manager.py  diagnostics.py  editorial.py  editorial_agent.py  editorial_batch.py  editorial_loop.py  logging_config.py  logging_utils.py  maintenance.py  models.py  openai_utils.py  pipeline_analytics.py  pipeline_db.py  pipeline_status.py  public_catalog.py  quality_tiers.py  search.py  seo_utils.py  sitemap_builder.py  slug_registry.py  storage.py  tool_classifier.py  web.py
ai_tools_website/v1/data_aggregators/: __init__.py  github_aggregator.py  huggingface_aggregator.py  package_aggregator.py  umami_aggregator.py
ai_tools_website/v1/migrations/: __init__.py  backfill_metadata.py
ai_tools_website/v1/static/: llms.txt  pipeline_status.json  styles.css
data/: tools.json
docker/: docker-compose.yml
docker/scripts/: crontab  run-update.sh
public/: index.html
scripts/: build_pipeline_status.py  crontab  run-comparisons.sh  run-enhancement.sh  run-sitemaps.sh  run-update.sh
src/ai_tools_website/: __init__.py  data_manager.py  logging_config.py  search.py  update_page.py  web.py
src/ai_tools_website/static/: search.js
templates/: index.html
tests/: test_data_manager.py  test_editorial.py  test_editorial_agent.py  test_editorial_batch.py  test_editorial_loop.py  test_maintenance.py  test_public_catalog.py  test_seo_utils.py  test_sitemap_builder.py  test_web.py
v1/: data_manager.py  search.py  storage.py
website/static/: search.js  styles.css
