[project]
name = "ai-tools-website"
version = "0.1.0"
description = "Collection of AI tooling one can use"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.3.1",
    "jinja2>=3.1.3",
    "openai>=1.61.1",
    "python-dotenv>=1.0.1",
    "diskcache>=5.6.3",
]

[project.optional-dependencies]
search = [
    "duckduckgo-search>=4.4.3",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_tools_website"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "Q000"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov" 
