[project]
name = "ai-tools-website"
version = "0.1.0"
description = "AI Tools Website"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.61.1",
    "python-dotenv>=1.0.1",
    "diskcache>=5.6.3",
    "tavily-python>=0.5.0",
    "python-fasthtml>=0.12.1",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_tools_website"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "Q000"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov" 
